lab 4 changes have been made

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
   </head>
   <body class="w-100 sans-serif bg-white">
-    <script src='/nanohtml.js'></script>
+    <script src='/nanoHtml.js'></script>
     <script src='/index.js'></script>
   </body>
 </html>
